--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 <button type="submit"class="btn btn-primary w-100">submit</button>
 </form> 
     </section>
-    <footer class="bg-info text-white text-center py-3"></footer>
+    <footer class="bg-info text-white text-center py-3">
         <p>@ coffee world. All Right Reserved.</p>
     </footer>
 </body>
