--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#services">services</a>
+                <a class="nav-link" href="#services">order</a>
             </li>
             <li class="nav-item">
-                <a class="nav link active" href="#appointment">appointment</a>
+                <a class="nav link active" href="#appointment"><b>contact</b></a>
             </li>
         </ul>
         </div>
